--- a/html/css/style.css
+++ b/html/css/style.css
@@ -32,3 +32,44 @@ p {
     margin: 10px 0;
 
 }
+
+img {
+    width: 100%;
+}
+
+.navbar {
+    background-color: #000066;
+    color: #fff;
+    height: 70px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar a {
+    color:#fff;
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.navbar a:hover {
+    border-bottom: 2px #fff solid;
+}
+
+.navbar .flex {
+    justify-content: space-between;
+}
+.container {
+    min-width:320px;
+    margin: 0 auto;
+    overflow: auto;
+    padding: 0 40px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    height:100%;
+
+}
