--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,8 @@
  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Montserrat:wght@300&display=swap');
+ :root {
+    --main-color: #000066
+ }
 
 * {
     box-sizing: border-box;
@@ -38,7 +41,7 @@ img {
 }
 
 .navbar {
-    background-color: #000066;
+    background-color: var(--main-color);
     color: #fff;
     height: 70px;
 }
@@ -60,6 +63,14 @@ img {
 .navbar .flex {
     justify-content: space-between;
 }
+
+.showcase{
+    height:400px;
+    background-color: var(--main-color)
+    
+}
+
+/*Classes*/
 .container {
     min-width:320px;
     margin: 0 auto;
