--- a/html/css/style.css
+++ b/html/css/style.css
@@ -67,7 +67,7 @@ img {
 .showcase{
     height:400px;
     background-color: #000066;
-    color:whitesmoke;
+    color:#000066;
     position:relative;
 }
 
@@ -101,7 +101,7 @@ img {
 }
 .showcase-form input[type='email'] {
     border: 0;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #000066;
     width:100%;
     padding: 3px;
     font-size: 16px;
@@ -118,6 +118,7 @@ img {
     bottom:-70px;
     right:0;
     left: 0;
+    transform:skewY(-3deg);
     -webkit-transform: skewY(-3deg);
     -moz-transform: skewY(-3deg);
     -ms-transform: skewY(-3deg);
@@ -158,7 +159,7 @@ img {
 
 .card {
     background-color: rgb(216, 161, 11);
-    color:antiquewhite;
+    color:#000066;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -170,8 +171,8 @@ img {
     padding: 10px 30px;
     cursor:pointer;
     background: var(--main-color);
-    color:antiquewhite;
-    border: antiquewhite;
+    color:#000066;
+    border: #000066;
     border-radius: 5px;
     transition: 0.3s;
 }
@@ -184,7 +185,7 @@ img {
     
 }
 .fade:hover {
-    background-color:antiquewhite;
+    background-color:#000066;
     color:black;
 
 }
