--- a/html/css/style.css
+++ b/html/css/style.css
@@ -66,13 +66,14 @@ img {
 /*main*/
 .showcase{
     height:400px;
-    background-color: #000066;
-    color:#000066;
+    background-color: var(--main-color) ;
+    color:green;
     position:relative;
 }
 
 .showcase h1 {
     font-size: 40px;
+    
 
 }
 
@@ -101,7 +102,7 @@ img {
 }
 .showcase-form input[type='email'] {
     border: 0;
-    border-bottom: 1px solid #000066;
+    border-bottom: 1px solid #fff;
     width:100%;
     padding: 3px;
     font-size: 16px;
@@ -118,10 +119,24 @@ img {
     bottom:-70px;
     right:0;
     left: 0;
+    background: var(--main-color);
     transform:skewY(-3deg);
     -webkit-transform: skewY(-3deg);
     -moz-transform: skewY(-3deg);
     -ms-transform: skewY(-3deg);
+}
+
+#form h2 {
+    color: #000066;
+    text-align: center;
+}
+#form button {
+    padding: 10px;
+    margin-top: 10px;
+    color:antiquewhite;
+    background-color: #fff;
+    border:none;
+    border-radius: 4px;
 }
 
     
@@ -159,7 +174,7 @@ img {
 
 .card {
     background-color: rgb(216, 161, 11);
-    color:#000066;
+    color:antiquewhite;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -170,15 +185,15 @@ img {
     display: inline-block;
     padding: 10px 30px;
     cursor:pointer;
-    background: var(--main-color);
-    color:#000066;
+    background-color: cornsilk;
+    color: #000066;
     border: #000066;
     border-radius: 5px;
     transition: 0.3s;
 }
 .btn-outline {
     background-color: transparent;
-    border: 1px antiquewhite solid;
+    border: 1px #000066 solid;
 }
 .btn:hover {
     transform: scale(.98)
@@ -188,4 +203,231 @@ img {
     background-color:#000066;
     color:black;
 
+}
+
+.input-control input {
+    border: 2px solid antiquewhite;
+    border-radius: 4px;
+    display: flex;
+    font-size: 12px;
+    padding: 10px;
+    width:100%;
+}
+
+.input-control input:focus {
+    outline: 0;
+}
+
+.input-control.success input {
+    border-color: green;
+}
+
+.input-control.error input {
+    border-color: red;
+}
+
+.input-control .error {
+    color: red;
+    font-size: 9px;
+    height: 13px;
+}
+
+
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.bg-secondary,
+.btn-secondary {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
+
+.bg-dark,
+.btn-dark {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+.bg-light,
+.btn-light {
+  background-color: var(--light-color);
+  color: #333;
+}
+
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a {
+  color: #fff;
+}
+
+/* Text colors */
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
+}
+
+.text-dark {
+  color: var(--dark-color);
+}
+
+.text-light {
+  color: var(--light-color);
+}
+
+/* Text sizes */
+.lead {
+  font-size: 20px;
+}
+
+.sm {
+  font-size: 1rem;
+}
+
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+/* Alert */
+.alert {
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert i {
+  margin-right: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.grid-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+/* Margin */
+.my-1 {
+  margin: 1rem 0;
+}
+
+.my-2 {
+  margin: 1.5rem 0;
+}
+
+.my-3 {
+  margin: 2rem 0;
+}
+
+.my-4 {
+  margin: 3rem 0;
+}
+
+.my-5 {
+  margin: 4rem 0;
+}
+
+.m-1 {
+  margin: 1rem;
+}
+
+.m-2 {
+  margin: 1.5rem;
+}
+
+.m-3 {
+  margin: 2rem;
+}
+
+.m-4 {
+  margin: 3rem;
+}
+
+.m-5 {
+  margin: 4rem;
+}
+
+/* Padding */
+.py-1 {
+  padding: 1rem 0;
+}
+
+.py-2 {
+  padding: 1.5rem 0;
+}
+
+.py-3 {
+  padding: 2rem 0;
+}
+
+.py-4 {
+  padding: 3rem 0;
+}
+
+.py-5 {
+  padding: 4rem 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 1.5rem;
+}
+
+.p-3 {
+  padding: 2rem;
+}
+
+.p-4 {
+  padding: 3rem;
+}
+
+.p-5 {
+  padding: 4rem;
 }
